# kontext-vtoff

./: .gitignore  .pre-commit-config.yaml  README.md  inference.py  pyproject.toml  requirements.txt  train.py
data/: README.md
data/training/train/: metadata.jsonl
data/training/validation/: metadata.jsonl
